use string constants from vpflayer Constants class
git-svn-id: svn+ssh://src.dsl.bbn.com/svn/openmap/trunk@1091 f68c23cc-7f87-4fbc-acfa-d9760b90acc1